src/test/ui/parser/keyword-return-as-identifier.stderr
error: expected identifier, found keyword `return`
  --> $DIR/keyword-return-as-identifier.rs:4:9
   |
LL |     let return = "foo";
   |         ^^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#return = "foo";
   |         ^^^^^^^^

error: aborting due to previous error

