src/test/ui/parser/keyword-return-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py return'

fn main() {
    let return = "foo"; //~ error: expected pattern, found keyword `return`
}
